[package]
name = "teyf_field"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_urlencoded = "*"
serde-xml-rs = "*"
chrono = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
futures-util = "*"
walkdir = "*"
rayon = "*"
actix-web = "*"
axum = { version = "*", features = ["ws"] }
reqwest = { version = "*", features = ["json"] }
surrealdb = "*"
quick-xml = "*"
calamine = "*"
zip = "*"
docx-rs = "*"
rand = "*"
tower-http = { version = "*", features = ["cors"] }
num_cpus = "*"
itertools = "*"
rust_decimal = { version = "*", features = ["serde"] }

curve25519-dalek = "*"
